--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,10 +12,18 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
+  injector: ^1.0.8
+  cloud_firestore: ^0.14.0-dev.1
+  firebase_auth: ^0.17.0-dev.1
+  google_sign_in: ^4.5.1
+
+dependency_overrides:
+  firebase_core: ^0.5.0-dev.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mfsao: ^0.1.3
 
 flutter:
   uses-material-design: true
